camel-spring: fix warnings due to usage of deprecated wrapper types